# ImageProcessingHomework

./: README.md
LeastSignificantBitEmbedding/: CMakeLists.txt  LeastSignificantBitEmbedding.h  main.cpp  readme.md
